manifests/monitoring/netpol-alertmanager.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: alertmanager
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9093"
              protocol: TCP
            - port: "8080"
              protocol: TCP
  egress:
    - toFQDNs:
        - matchName: "discord.com"
        - matchName: "discordapp.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            eventsource-name: alertmanager-webhook
            io.kubernetes.pod.namespace: argo
      toPorts:
        - ports:
            - port: "12001"
              protocol: TCP
