manifests/monitoring/netpol-alloy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: alloy
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: alloy
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "12345"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: loki
            app.kubernetes.io/component: gateway
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
