manifests/monitoring/netpol-loki-canary.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loki-canary
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: canary
  ingress: []
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: loki
            app.kubernetes.io/component: gateway
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: loki
            app.kubernetes.io/component: single-binary
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
