manifests/monitoring/netpol-loki-gateway.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loki-gateway
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: gateway
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: grafana
        - matchLabels:
            app.kubernetes.io/name: alloy
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: loki
            app.kubernetes.io/component: single-binary
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
