manifests/monitoring/netpol-tempo.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tempo
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tempo
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: grafana
      toPorts:
        - ports:
            - port: "3200"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app: rook-ceph-rgw
            io.kubernetes.pod.namespace: rook-ceph
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
